methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:5: error: not found: value brushdown
                               while (!isOverBaggle()) {if (!isFacingTrail(c)) {left(); if (!isFacingTrail(c)) {right(); right()}}; brushdown(); forward(); brushup()}
                                                                                                                                    ^SlugSnail:5: error: not found: value brushup
                               while (!isOverBaggle()) {if (!isFacingTrail(c)) {left(); if (!isFacingTrail(c)) {right(); right()}}; brushdown(); forward(); brushup()}
                                                                                                                                                            ^